--- a/flower-web-portfoflo/practise.html
+++ b/flower-web-portfoflo/practise.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="pe"> <a href="">fhgh</a>
-    <a href="">dsaghlkh</a></div>
+  <div class="p container">
+    <img src="./assets/deal-ana.png" alt="">
+    <img src="./assets/deal-ana.png" alt="">
+    <img src="./assets/logo.png" alt="">
+    <img src="./assets/icon-youtube.png" alt="">
+  </div>
+  <div class="p container">
+    <img src="./assets/deal-ana.png" alt="">
+    <img src="./assets/deal-ana.png" alt="">
+    <img src="./assets/logo.png" alt="">
+    <img src="./assets/icon-youtube.png" alt="">
+  </div>
 </body>
 </html>
