this is the final commit

--- a/flower-web-portfoflo/index.html
+++ b/flower-web-portfoflo/index.html
@@ -174,19 +174,32 @@ Discover beauty for every occasion at our flower shop.</p>
             </div>
             <div class="right-img left-img middle " >
               <p class="back-box">25% Off | Zabo Plant</p>
-              <br>
+              
               <a href="">Shop Now</a>
             </div>
         </section>
 
     </main>
     <footer>
-        <div>
-       <div><img src="./assets/logo.png" alt=""></div>
-       <div>Indulge your senses with the fragrance and charm of our fresh flower shop—where classic roses meet exotic blooms, and every bouquet is made to inspire.
-        </div>
 
-        <div><ul>
+        <div class="footer-first">
+           <h1 class="bsa">Join the Colorful Bunch</h1>
+           <div class="design-form">
+            <form action="">
+                <input type="email" placeholder="Write email">
+                <button class="btn2">Subscribe</button>
+            </form></div>
+        </div>
+        
+
+
+        <div class="last-design ">
+            <div>
+       <div><img src="./assets/logo.png" alt=""></div>
+       <div class="foot-para b-para">Indulge your senses with the fragrance and charm of our fresh flower shop—where classic roses meet exotic blooms, and every bouquet is made to inspire.
+        </div></div>
+
+        <div><ul class="b-para">
             <li>Home</li>
         <li>About Us</li>
         <li>Blog</li>
@@ -194,7 +207,7 @@ Discover beauty for every occasion at our flower shop.</p>
         <li>Contact Us</li></ul>
      </div>
 
-        <div><ul>
+        <div><ul class="b-para">
             <li>Features</li>
         <li>Pricing</li>
         <li>Privacy Policy</li> 
